5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1667_2967.log
== TEST (2019-04-16 16:05:58) 
-- CODE:
a = input('altura permitida')
sozinho = 1.37
acompanhado= <=1.37
-- ERROR:
File "XXXX", line 3
    acompanhado= <=1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:10:25) 
-- CODE:
a = input('altura permitida')
sozinho = 1.37
acompanhado= <=1.37
if sozinho 
-- ERROR:
File "XXXX", line 3
    acompanhado= <=1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:50) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado= <=1.37
if (sozinho
-- ERROR:
File "XXXX", line 3
    acompanhado= <=1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:56) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado= <=1.37
if (sozinho
-- ERROR:
File "XXXX", line 3
    acompanhado= <=1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:04) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado= <=1.37

-- ERROR:
File "XXXX", line 3
    acompanhado= <=1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:12) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = <=1.37

-- ERROR:
File "XXXX", line 3
    acompanhado = <=1.37
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:18) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 4

-- ERROR:
File "XXXX", line 3
    acompanhado = <=1.37
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:30) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.2

-- ERROR:
File "XXXX", line 3
    acompanhado = <=1.37
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:52) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = >1.37

-- ERROR:
File "XXXX", line 3
    acompanhado = >1.37
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:06) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 

-- ERROR:
File "XXXX", line 3
    acompanhado = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:11) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 2

-- ERROR:
File "XXXX", line 3
    acompanhado = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:59) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

-- ERROR:
File "XXXX", line 3
    acompanhado = 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:00) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

if(sozinho <= acompanhado)
print('sim')

-- ERROR:
File "XXXX", line 5
    if(sozinho <= acompanhado)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:09) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

if(sozinho = acompanhado)
print('sim')

-- ERROR:
File "XXXX", line 5
    if(sozinho = acompanhado)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:26) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

if(sozinho = acompanhado:
print('sim')

-- ERROR:
File "XXXX", line 5
    if(sozinho = acompanhado:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:37) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if(sozinho = acompanhado:
print('sim')

-- ERROR:
File "XXXX", line 4
    if(sozinho = acompanhado:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:50) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if(sozinho = acompanhado):
print('sim')

-- ERROR:
File "XXXX", line 4
    if(sozinho = acompanhado):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:04) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if('sozinho = acompanhado'):
print('sim')

-- ERROR:
File "XXXX", line 5
    print('sim')
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:31) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if(sozinho = acompanhado):
print('sim')

-- ERROR:
File "XXXX", line 4
    if(sozinho = acompanhado):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:42) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:46) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:33) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38

-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:55) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if()
-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:03) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.38
if():
-- ERROR:
File "XXXX", line 5
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:53) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- ERROR:
File "XXXX", line 5
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:22) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- ERROR:
File "XXXX", line 5
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:38) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:41) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:49) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:58) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:09) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho>=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:41) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:51) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:39) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no)
-- ERROR:
File "XXXX", line 7
    print('no)
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:50) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:17) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: ))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- ERROR:
File "XXXX", line 2
    b = float(input('altura amigo: ))
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:27) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:54) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:11) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:42) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:08) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:19) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:26) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura do seu amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:14) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura do seu amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:18) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura do seu amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- EXECUTION TIME:
0.149308
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
sim
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
sim
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:21) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura do seu amigo: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:49) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:58) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<=acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:11) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:20) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:27) 
-- CODE:
a = float(input('sua altura: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('no')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:50) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:04) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = a
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:22) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = <1.70
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- ERROR:
File "XXXX", line 3
    sozinho = <1.70
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:32) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:09) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:30) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:59) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:05) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:19) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:23) 
-- CODE:
a = float(input('sua altura: '))
b = float(input('altura 2: '))
sozinho = 1.37
acompanhado = 1.50
if(sozinho<acompanhado):
	print('sim')
else:
	print('nao')
-- EXECUTION TIME:
0.151499
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
sim
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
sim
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
